[package]
name = "wise"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
core-foundation-sys = { version = "0.8.7", default-features = false }
accessibility-sys = { version = "0.1.3", default-features = false }
snafu = { version = "0.8.5", default-features = false, features = ["std"] }

[lints.clippy]
undocumented_unsafe_blocks = "forbid"
